<resources>
    <string name="app_name">TangoCity</string>
    <string name="title_home">Home</string>
    <string name="title_create">Create</string>
    <string name="title_delete">Delete</string>
    <string name="confirm_title_delete_card">Delete this card?</string>
    <string name="confirm_message_delete_card">You cannot undo this action</string>
    <string name="confirm_title_delete_deck">Delete this deck?</string>
    <string name="confirm_message_delete_deck">You cannot undo this action</string>
    <string name="confirm_title_cancel">Do you really want to leave?</string>
    <string name="confirm_message_cancel">You cannot undo this action</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_positive">Accept</string>
    <string name="create_cancel">Cancel</string>
    <string name="create_done">Done</string>
    <string name="create_hint_deck_name">Deck name</string>
    <string name="create_hint_deck_name_active">What desk is it in?</string>
    <string name="create_hint_question">Question</string>
    <string name="create_hint_answer">Answer</string>
    <string name="create_helper_required">*Required</string>
    <string name="create_checkbox_text">Create New Deck</string>
    <string name="create_fab_description">the fab of deleting a card</string>
    <string name="top_welcome_text">Welcome!!</string>
    <string name="top_title_calendar">Calendar</string>
    <string name="top_title_decks">Decks</string>
    <string name="top_previous_icon_description">the icon of left arrow</string>
    <string name="top_next_icon_description">the icon of right arrow</string>
    <string name="calendar_circle_description">the circle in the day of a calendar</string>
    <string name="review_tab_text_study">Study</string>
    <string name="review_tab_text_stat">Stat</string>
    <string name="review_tab_text_edit">Edit</string>
    <string name="stat_title_card_counts">Card Counts</string>
    <string name="stat_title_calendar">Calendar</string>
    <string name="study_finish_message">You done!</string>
    <string name="study_button_message">How easy do you feel?</string>
    <string name="study_button_text_bad">Bad</string>
    <string name="study_button_text_good">Perfect</string>
    <string name="study_button_1">1</string>
    <string name="study_button_2">2</string>
    <string name="study_button_3">3</string>
    <string name="study_button_4">4</string>
    <string name="study_button_5">5</string>
    <string name="study_finish_icon_description">the icon of check mark</string>
    <string name="study_edit_icon_description">the icon of a pencil</string>
    <string name="study_button1_description">the button of answer 1</string>
    <string name="study_button2_description">the button of answer 2</string>
    <string name="study_button3_description">the button of answer 3</string>
    <string name="study_button4_description">the button of answer 4</string>
    <string name="study_button5_description">the button of answer 5</string>
    <string name="edit_fab_description">the fab of creating a card</string>
    <string name="deck_arrow_icon_description">the icon of right arrow</string>
</resources>