<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/finish_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_baseline_done_outline_24"
        android:visibility="invisible"
        app:tint="@color/normal_icon"
        android:contentDescription="@string/study_finish_icon_description"
        app:layout_constraintBottom_toTopOf="@id/answer_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/finish_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/study_finish_message"
        android:visibility="invisible"
        style="@style/buttonText"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/finish_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_layout"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/button_color"
        app:layout_constraintBottom_toTopOf="@id/answer_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="end"
                android:src="@drawable/ic_baseline_edit_24"
                android:background="@null"
                android:contentDescription="@string/study_edit_icon_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/question_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                style="@style/buttonText"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/button_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/study_button_message"
        style="@style/normalText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/answer_3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/answer_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/answer_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_answer_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/study_button1_description"
                app:backgroundTint="@color/button_color" />

            <TextView
                android:id="@+id/button_answer_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/study_button_1"
                style="@style/buttonText" />
        </FrameLayout>

        <TextView
            android:id="@+id/button_caption_bad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_button_text_bad"
            style="@style/normalText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/answer_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/answer_3"
        app:layout_constraintStart_toEndOf="@id/answer_1" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_answer_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/study_button2_description"
                app:backgroundTint="@color/button_color" />

            <TextView
                android:id="@+id/button_answer_2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/study_button_2"
                style="@style/buttonText" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normalText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/answer_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/answer_4"
        app:layout_constraintStart_toEndOf="@id/answer_2" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_answer_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/study_button3_description"
                app:backgroundTint="@color/button_color" />

            <TextView
                android:id="@+id/button_answer_3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/study_button_3"
                style="@style/buttonText" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normalText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/answer_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/answer_5"
        app:layout_constraintStart_toEndOf="@id/answer_3" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_answer_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/study_button4_description"
                app:backgroundTint="@color/button_color" />

            <TextView
                android:id="@+id/button_answer_4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/study_button_4"
                style="@style/buttonText" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/normalText" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/answer_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/answer_4" >

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_answer_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/study_button5_description"
                app:backgroundTint="@color/button_color" />

            <TextView
                android:id="@+id/button_answer_5_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/study_button_5"
                style="@style/buttonText" />
        </FrameLayout>

        <TextView
            android:id="@+id/button_caption_perfect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/study_button_text_good"
            style="@style/normalText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>