<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/card_counts_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/stat_title_card_counts"
                android:textSize="20sp"
                style="@style/boldText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <FrameLayout
                android:id="@+id/deck_layout"
                android:layout_width="240dp"
                android:layout_height="240dp"
                app:layout_constraintTop_toBottomOf="@id/card_counts_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.anychart.AnyChartView
                    android:id="@+id/deck_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/background" />

                <LinearLayout
                    android:id="@+id/deck_script"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/deck_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textColor="@color/bold_text" />

                    <TextView
                        android:id="@+id/deck_sub_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/normal_text" />

                    <TextView
                        android:id="@+id/deck_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textSize="14sp"
                        android:textColor="@color/normal_text" />

                </LinearLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/calendar_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/stat_title_calendar"
                android:textSize="20sp"
                style="@style/boldText"
                app:layout_constraintTop_toBottomOf="@id/deck_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/month_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calendar_title">

                <ImageView
                    android:id="@+id/previous_month_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/top_previous_icon_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_black_24"
                    app:tint="@color/normal_icon" />

                <TextView
                    android:id="@+id/month_year_txt"
                    style="@style/normalText"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/previous_month_img"
                    app:layout_constraintStart_toEndOf="@id/next_month_img"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/next_month_img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/top_next_icon_description"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_black_24"
                    app:tint="@color/normal_icon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/stat_calendar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/month_selector">

                <include
                    android:id="@+id/titlesContainer"
                    layout="@layout/calendar_day_titles_container" />

                <com.kizitonwose.calendar.view.CalendarView
                    android:id="@+id/stat_calendar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cv_dayViewResource="@layout/calendar_day_layout" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>